--- a/summary.html
+++ b/summary.html
@@ -3,94 +3,55 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>Gastos 2N</title>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <style>
-    :root{
-      --bg:#0b0c0f;--panel:#12141a;--muted:#9aa3b2;--text:#e6e8ec;--brand:#0a84ff;--border:#1e2230;
-      --ok:#34c759;--warn:#ffd60a;--danger:#ff453a;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0;background:var(--bg);color:var(--text);font:16px -apple-system,system-ui,Segoe UI,Roboto,"SF Pro Text","SF Pro Display";}
-    .safe{padding: max(12px, env(safe-area-inset-top)) max(14px, env(safe-area-inset-right)) max(16px, env(safe-area-inset-bottom)) max(14px, env(safe-area-inset-left));}
-    .topbar{position:sticky;top:0;background:rgba(10,12,16,.75);backdrop-filter: blur(14px);display:flex;gap:10px;align-items:center;padding:12px 14px;border-bottom:1px solid var(--border);z-index:10}
-    .topbar h1{margin:0;font-size:18px;font-weight:700;letter-spacing:.3px}
-    .spacer{flex:1}
-    .btn{border:1px solid var(--border);background:linear-gradient(180deg,#1b1e26,#151924);color:var(--text);border-radius:14px;padding:10px 12px;font-weight:600;cursor:pointer}
-    .btn.brand{background:linear-gradient(180deg,#0a84ff,#066ad0);border:none;color:#fff}
-    .btn.ghost{background:transparent}
-    .btn.icon{display:flex;align-items:center;gap:8px}
-    .icon{display:inline-flex;width:22px;height:22px;filter:invert(90%)}
-    .panel{background:var(--panel);border:1px solid var(--border);border-radius:18px;padding:12px 12px}
-    .grid{display:grid;gap:12px}
-    .grid.actions{grid-template-columns:repeat(2,1fr)}
-    @media(min-width:520px){ .grid.actions{grid-template-columns:repeat(3,1fr)} }
-    .tile{display:flex;align-items:center;gap:12px;padding:14px;border:1px solid var(--border);border-radius:16px;background:linear-gradient(180deg,#171a22,#12141a)}
-    .muted{color:var(--muted)}
-    .hidden{display:none!important}
-    input,select,textarea{width:100%;border:1px solid var(--border);background:#0f1218;color:var(--text);border-radius:12px;padding:10px}
-    label{font-size:12px;color:var(--muted)}
-    .modal{position:fixed;inset:0;display:none;align-items:flex-end;justify-content:center;background:rgba(0,0,0,.4);z-index:30}
-    .modal.open{display:flex}
-    .sheet{width:100%;max-width:520px;background:var(--panel);border-top-left-radius:18px;border-top-right-radius:18px;border:1px solid var(--border);padding:12px 14px 16px 14px}
-    .sheet header{display:flex;align-items:center;justify-content:space-between;margin-bottom:8px}
-    .row{display:grid;grid-template-columns:1fr 1fr;gap:10px}
-    .preview{display:flex;gap:10px;align-items:center;border:1px dashed var(--border);padding:8px;border-radius:12px}
-    .link{color:#9bbcff;text-decoration:none}
-    .footer{position:sticky;bottom:0;background:rgba(10,12,16,.75);backdrop-filter:blur(14px);padding:10px 14px;border-top:1px solid var(--border);display:flex;gap:10px}
-    .chip{font-size:12px;color:#c8ccd6;background:#0f1218;border:1px solid var(--border);border-radius:999px;padding:6px 10px}
-    canvas{width:100%;max-width:100%;height:320px}
-    .list{display:flex;flex-direction:column;gap:8px}
-    .item{display:flex;align-items:center;justify-content:space-between;padding:10px;border:1px solid var(--border);border-radius:12px;background:#0f1218}
-  </style>
-  <!-- Libs -->
-  <script src="https://cdn.jsdelivr.net/npm/jszip@3.10.1/dist/jszip.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.5/dist/FileSaver.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/xlsx@0.20.1/dist/xlsx.full.min.js"></script>
-  <!-- Firebase compat -->
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
+  <title>Sumary · Gastos 2N</title>
+  <link rel="stylesheet" href="assets/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
-
-<body class="safe">
-  <div class="topbar">
-    <a class="btn ghost icon" href="index.html"><img class="icon" src="assets/back.svg" alt="">Volver</a>
-    <h1>Sumario</h1>
-    <div class="spacer"></div>
-    <button id="btnLogin" class="btn brand">Entrar</button>
-    <button id="btnLogout" class="btn hidden">Salir</button>
+<body>
+<header class="topbar">
+  <h1>📊 Sumario</h1>
+  <a class="badge" href="index.html">← Volver</a>
+</header>
+<main class="content">
+  <div id="sumPanel" class="card">
+    <h2>Resumen mensual</h2>
+    <div class="row">
+      <div class="field"><label>Mes</label><input id="sumMonth" type="month"/></div>
+      <button id="btnPDF" class="btn primary">🧾 PDF</button>
+      <button id="btnFotos" class="btn">🖼️ Abrir fotos</button>
+    </div>
+    <hr class="sep"/>
+    <div class="kpi">
+      <div class="tile"><div class="small">Gasto total</div><div id="sGasto" class="v">0.00 €</div></div>
+      <div class="tile"><div class="small">Ingresos</div><div id="sIng" class="v">0.00 €</div></div>
+      <div class="tile"><div class="small">Pagado con mi dinero</div><div id="sMi" class="v">0.00 €</div></div>
+      <div class="tile"><div class="small">KM personales (coste)</div><div id="sKm" class="v">0.00 €</div></div>
+    </div>
+    <hr class="sep"/>
+    <div class="row">
+      <div class="badge">🔢 Liquidación neta = Gastos - Ingresos - KM personales</div>
+    </div>
+    <h3 style="margin-top:10px">Liquidación neta</h3>
+    <div class="tile" style="padding:18px;font-size:22px" id="liq">0.00 €</div>
   </div>
 
-  <main class="grid safe" style="gap:14px">
-    <section class="panel">
-      <div class="row">
-        <div><label>Mes</label><input id="sumMonth" type="month"></div>
-      </div>
-      <div style="margin-top:10px" class="grid" >
-        <canvas id="sumChart"></canvas>
-      </div>
-    </section>
+  <div class="card">
+    <h2>Logs</h2>
+    <div id="out" class="logs mono"></div>
+  </div>
+</main>
 
-    <section class="panel">
-      <div style="display:flex;gap:8px;flex-wrap:wrap">
-        <span class="chip" id="sumG">Gastos: —</span>
-        <span class="chip" id="sumI">Ingresos: —</span>
-        <span class="chip" id="sumKm">Ajuste KM personales: —</span>
-        <span class="chip" id="sumNet">Total neto: —</span>
-      </div>
-      <div class="list" id="sumList" style="margin-top:10px"></div>
-    </section>
-  </main>
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
 
-  
 <script>
-  // ⚙️ Config Firebase (tu proyecto)
-  const FB = {
+(function(){
+  const $=id=>document.getElementById(id);
+  const log=(m)=>{ const out=$("out"); out.textContent+=(typeof m==="string"?m:JSON.stringify(m,null,2))+"\n"; };
+
+  const firebaseConfig = {
     apiKey: "AIzaSyBTK8altmAR-fWqR9BjE74gEGavuiqk1Bs",
     authDomain: "gastos-2n.firebaseapp.com",
     projectId: "gastos-2n",
@@ -98,55 +59,56 @@
     messagingSenderId: "55010048795",
     appId: "1:55010048795:web:4fb48d1e0f9006ebf7b1be"
   };
-  firebase.initializeApp(FB);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-  const storage = firebase.storage();
-  const provider = new firebase.auth.GoogleAuthProvider();
+  firebase.initializeApp(firebaseConfig);
+  const auth=firebase.auth();
+  const db=firebase.firestore();
+
+  $("sumMonth").value=new Date().toISOString().slice(0,7);
+  auth.onAuthStateChanged(u=>{ if(!u) location.href="index.html"; else cargar(); });
+  $("sumMonth").onchange=cargar;
+
+  function rangoMes(ym){ const s=new Date(ym+"-01T00:00:00"); const e=new Date(s.getFullYear(), s.getMonth()+1, 1); return [s,e]; }
+
+  async function cargar(){
+    const u=auth.currentUser; if(!u) return;
+    const ym=$("sumMonth").value; const [s,e]=rangoMes(ym);
+
+    const ents=(await db.collection(`users/${u.uid}/entries`).where("date",">=",s).where("date","<",e).get()).docs.map(d=>d.data());
+    const kms=(await db.collection(`users/${u.uid}/kms`).where("date",">=",s).where("date","<",e).get()).docs.map(d=>d.data());
+
+    let gasto=0, ingreso=0, mi=0; const fotos=[];
+    ents.forEach(e=>{
+      const isExp=e.category!=="ingreso"; const a=Number(e.amount||0);
+      if(isExp) gasto+=a; else ingreso+=a;
+      if(isExp && e.paidWith==="mio") mi+=a;
+      if(e.photoURL) fotos.push(e.photoURL);
+    });
+    let kmCost=0; kms.forEach(k=>{ kmCost += Number(k.kmPer||0)*Number(k.precio||0); });
+    $("sGasto").textContent=gasto.toFixed(2)+" €";
+    $("sIng").textContent=ingreso.toFixed(2)+" €";
+    $("sMi").textContent=mi.toFixed(2)+" €";
+    $("sKm").textContent=kmCost.toFixed(2)+" €";
+    const liq = gasto - ingreso - kmCost;
+    $("liq").textContent = liq.toFixed(2)+" €";
+
+    $("btnFotos").onclick=()=>{
+      if(!fotos.length) return alert("Sin fotos");
+      fotos.forEach((url,i)=> setTimeout(()=> window.open(url,"_blank"), i*200));
+    };
+
+    $("btnPDF").onclick=async ()=>{
+      const el=document.getElementById("sumPanel");
+      const canvas=await html2canvas(el,{scale:2,backgroundColor:"#111217"});
+      const img=canvas.toDataURL("image/png");
+      const { jsPDF } = window.jspdf;
+      const pdf=new jsPDF({unit:"pt",format:"a4"});
+      const pageW=595.28;
+      const imgW=pageW-60, imgH=imgW*(canvas.height/canvas.width);
+      pdf.addImage(img,"PNG",30,30,imgW,imgH);
+      pdf.save(`Sumario_${ym}.pdf`);
+    };
+  }
+})();
 </script>
-
-  <script>
-  (function(){
-    const $=id=>document.getElementById(id);
-    $('sumMonth').value = new Date().toISOString().slice(0,7);
-    $('btnLogin').onclick=async()=>{ try{ await auth.signInWithPopup(new firebase.auth.GoogleAuthProvider()); }catch(e){ alert(e.message);} };
-    $('btnLogout').onclick=async()=>{ await auth.signOut(); };
-    $('sumMonth').addEventListener('change', refresh);
-    auth.onAuthStateChanged(u=>{ if(u){ $('btnLogin').classList.add('hidden'); $('btnLogout').classList.remove('hidden'); refresh(); } else { $('btnLogin').classList.remove('hidden'); $('btnLogout').classList.add('hidden'); }});
-
-    const range=(ym)=>{ const s=new Date(ym+'-01T00:00:00'); const e=new Date(s.getFullYear(), s.getMonth()+1, 1); return [s,e]; }
-    async function getKm(m, uid){ const d=await db.collection('users/'+uid+'/meta').doc('km_'+m).get(); return (d.exists && Number((d.data()||{}).km_personal_cost||0))||0; }
-
-    async function refresh(){
-      const u=auth.currentUser; if(!u) return;
-      const m=$('sumMonth').value||new Date().toISOString().slice(0,7);
-      const [s,e]=range(m);
-      const entries=await (await db.collection('users/'+u.uid+'/entries').where('date','>=',s).where('date','<',e).orderBy('date','asc').get()).docs.map(d=>({id:d.id, ...d.data()}));
-      const kmCost = await getKm(m, u.uid);
-
-      let G=0,I=0; const list=$('sumList'); list.innerHTML='';
-      const byCat={};
-      entries.forEach(x=>{
-        const d=(x.date?.toDate?x.date.toDate():new Date(x.date)).toISOString().slice(0,10);
-        const a=Number(x.amount||0);
-        const cat=x.category||'varios';
-        byCat[cat]=(byCat[cat]||0) + (cat==='ingreso'?a:-a);
-        if(cat==='ingreso') I+=a; else G+=a;
-        const el=document.createElement('div'); el.className='item';
-        el.innerHTML='<div><div style="font-weight:600">'+(x.provider||'-')+'</div><div class="muted" style="font-size:12px">'+d+' · '+cat+'</div></div><div style="font-weight:700;'+(cat==='ingreso'?'color:var(--ok)':'color:var(--danger)')+'">'+(cat==='ingreso'?'+':'-')+a.toFixed(2)+'€</div>';
-        list.appendChild(el);
-      });
-
-      $('sumG').textContent = 'Gastos: -'+G.toFixed(2)+' €';
-      $('sumI').textContent = 'Ingresos: +'+I.toFixed(2)+' €';
-      $('sumKm').textContent = 'Ajuste KM personales: -'+kmCost.toFixed(2)+' €';
-      $('sumNet').textContent = 'Total neto: '+(I-G-kmCost).toFixed(2)+' €';
-
-      const labels=Object.keys(byCat); const data=labels.map(k=>byCat[k]);
-      const ctx=$('sumChart'); if(window.__sumch) window.__sumch.destroy();
-      window.__sumch = new Chart(ctx,{type:'doughnut', data:{labels, datasets:[{data}]}, options:{plugins:{legend:{labels:{color:'#cfd3da'}}}}});
-    }
-  })();
-  </script>
 </body>
 </html>
